--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-emotion": "^9.2.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
     "webpack-serve": "^2.0.2"
   },
   "dependencies": {
-    "babel-plugin-emotion": "^9.2.6",
     "emotion": "^9.2.6",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.6"
