--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-emotion": "^9.2.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "raw-loader": "^0.5.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
     "webpack-serve": "^2.0.2"
